return dto for game